🐛 fix: mtab flicker

--- a/SwashbucklerDiary/wwwroot/css/extend/masa-blazor-extend.css
+++ b/SwashbucklerDiary/wwwroot/css/extend/masa-blazor-extend.css
@@ -166,3 +166,7 @@
     }
 }
 
+/*临时解决MTabs闪烁问题*/
+.m-tabs-bar > .m-slide-group__wrapper {
+    flex: unset !important;
+}
